# bors-mg

./: .gitignore  Cargo.toml  README.md  justfile  wrangler.toml
src/: cf.rs  config.rs  lib.rs  permissions.rs
src/bors/: event.rs  mod.rs
src/bors/command/: parser.rs
src/bors/handlers/: mod.rs  ping.rs  trybuild.rs  workflow.rs
src/github/: misc.rs  mod.rs  webhook.rs
src/github/api/: client.rs  misc.rs  mod.rs  operations.rs
src/github/client/: app.rs  auto.rs  mod.rs  token.rs
src/models/: events.rs  gists.rs  mod.rs  repos.rs  teams.rs  workflows.rs
src/models/payload/: commit_comment.rs  create.rs  delete.rs  fork.rs  gollum.rs  issue_comment.rs  issues.rs  member.rs  mod.rs  pull_request.rs  pull_request_review.rs  pull_request_review_comment.rs  push.rs  workflow_run.rs
