[package]
name = "bors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
#opt-level = "z"  # Optimize for size.

[features]
default = []
servo = []

[dependencies]
async-trait = "0.1"
# Errors
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
toml = "0.7"

# Web
url = { version = "2", features = ["serde"] }
http = "0.2"
#hyper = { version="0.14", default-features = false, features = ['http1', 'client'] }
tokio = { version = "1", default-features = false, features = ['io-util', 'macros', 'rt']}
console_error_panic_hook = { version = "0.1" }
wasm-bindgen-futures = "0.4"
# Logging
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }
reqwest = { version = "0.11", features = ['json'] }


# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
jsonwebtoken = { git="https://github.com/chenzhenjia/jsonwebtoken.git", branch="wasm_support" }

# Time
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }

worker = "0.0.17"
graphql_client = "0.13"

[dev-dependencies]
insta = "1.26"
